Remove Orpheus TTS, keep Chatterbox as sole TTS engine
- Removed Orpheus engine from tts-manager.ts (only Chatterbox remains)

- Deleted Orpheus folders: orpheus-fastapi, tts-binaries/orpheus_server, models/orpheus-3b-0.1-ft

- Deleted Orpheus files: orpheus-manager.ts, ORPHEUS_*.md, test-orpheus-*

- Updated legacy orpheus API to delegate to Chatterbox (for Next.js compatibility)

- Updated ORPHEUS_TTS_URL to point to Chatterbox port 4123

- Cleaned up .gitignore, updated all documentation for Chatterbox

- Build artifacts cleaned from dist/ and release/ folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
 
-# Build output
+# Build outputs
 dist/
 release/
+build/
 
-# TypeScript
-*.tsbuildinfo
+# TTS binaries (build artifacts - too large for git)
+tts-binaries/
+
+# Test outputs
+*.wav
+!voices/*.wav
 
 # Logs
-logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
-# Operating System
+# OS
 .DS_Store
 Thumbs.db
 desktop.ini
@@ -30,17 +31,9 @@ desktop.ini
 *.swo
 *~
 
-# Electron
-out/
-build/
+# Models (too large for git)
+models/
 
 # Environment
 .env
 .env.local
-.env.*.local
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
-
