--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "tsc && electron .",
     "build": "tsc",
-    "start": "npm run build && cross-env ELECTRON_PROD=true electron .",
-    "package": "npm run build && electron-builder --win --mac",
-    "package:win": "npm run build && electron-builder --win",
-    "package:mac": "npm run build && electron-builder --mac",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    
+    "dev": "npm run build && cross-env APP_ENV=dev electron .",
+    "dev:electron": "npm run build && cross-env APP_ENV=dev electron .",
+    
+    "start": "npm run build && cross-env APP_ENV=prod electron .",
+    "start:prod": "npm run build && cross-env APP_ENV=prod electron .",
+    
+    "package": "npm run build && cross-env APP_ENV=prod electron-builder --win --mac",
+    "package:win": "npm run build && cross-env APP_ENV=prod electron-builder --win",
+    "package:mac": "npm run build && cross-env APP_ENV=prod electron-builder --mac",
+    "build:electron": "npm run build && cross-env APP_ENV=prod electron-builder",
+    
+    "test:tts": "npm run build && cross-env TTS_TEST=true electron .",
+    
+    "build:chatterbox": "powershell -ExecutionPolicy Bypass -File scripts/build-chatterbox.ps1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -39,7 +49,15 @@
       "dist/**/*",
       "config.json",
       "src/splash.html",
+      "src/loading.html",
       "assets/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "tts-binaries/chatterbox_server",
+        "to": "chatterbox",
+        "filter": ["**/*"]
+      }
     ],
     "win": {
       "target": [
